--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.25.1",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/jszip": "^3.4.0",
 		"daisyui": "^5.0.46",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -36,6 +37,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.525.0"
+		"@lucide/svelte": "^0.525.0",
+		"jszip": "^3.10.1"
 	}
 }
